--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ПсиПоддержка — поддержка студентов</title>
   <link rel="stylesheet" href="style.css" />
+  <!-- app.js вызывает applyTheme() немедленно — темы применяются до отрисовки -->
   <script src="app.js"></script>
 </head>
 <body>
@@ -16,7 +17,6 @@
     <ul class="nav-links">
       <li><a href="index.html">Главная</a></li>
       <li><a href="dashboard.html">Дневник</a></li>
-      <li><a href="tests.html">Тесты</a></li>
       <li><a href="audio.html">Медитации</a></li>
       <li><a href="login.html">Войти</a></li>
     </ul>
@@ -56,7 +56,7 @@
       <h2 style="font-size:1rem;">Экстренная помощь</h2>
       <p style="font-size:0.88rem;">Кнопка "Срочно успокоиться" запускает совет или медитацию мгновенно.</p>
     </div>
-    
+
   </div>
 </div>
 
