--- a/dashboard.html
+++ b/dashboard.html
@@ -3,14 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Дневник — ПсиПоддержка</title>
+  <title>Медитации — ПсиПоддержка</title>
   <link rel="stylesheet" href="style.css" />
-  <!-- app.js в <head> чтобы тема применилась до отрисовки (нет мигания) -->
-  <script src="app.js?v=1"></script>
+  <script src="app.js"></script>
 </head>
 <body>
 
-<!-- ══ НАВИГАЦИЯ ══ -->
 <nav>
   <a class="nav-logo" href="index.html">🌿 ПсиПоддержка</a>
   <div class="nav-right">
@@ -25,136 +23,15 @@
   </div>
 </nav>
 
-<!-- ══ ОСНОВНОЙ КОНТЕНТ ══ -->
 <div class="container">
-
-  <!-- Приветствие -->
-  <div style="margin-bottom: 28px;" class="fade-in">
-    <h1>Привет, <span id="user-name">...</span> 👋</h1>
-    <p>Как ты сегодня? Запишите своё состояние.</p>
+  <div style="margin-bottom:28px;" class="fade-in">
+    <h1>🎧 Медитации</h1>
+    <p>Короткие русскоязычные практики для снятия тревоги и перезагрузки.</p>
   </div>
 
-  <!-- ══ СТАТИСТИКА ТЕСТОВ ЗА НЕДЕЛЮ ══ -->
-  <div id="stats-container" class="card fade-in">
-    <!-- Данные вставляются через JS -->
-  </div>
-
-  <!-- ══ ФОРМА ДНЕВНИКА ══ -->
-  <div class="card fade-in">
-    <h2>📓 Новая запись</h2>
-    <form id="diaryForm">
-      <div class="form-group">
-        <label for="diary-text">Что происходит? Как вы себя чувствуете?</label>
-        <textarea id="diary-text" rows="4" placeholder="Напишите любую мысль или ощущение..."></textarea>
-      </div>
-      <div class="form-group">
-        <label>Настроение (смайлы):</label>
-        <div id="mood-emoji-selector">
-          <span class="mood-emoji" data-mood="1">☹️</span>
-          <span class="mood-emoji" data-mood="2">🙁</span>
-          <span class="mood-emoji selected" data-mood="3">😐</span>
-          <span class="mood-emoji" data-mood="4">🙂</span>
-          <span class="mood-emoji" data-mood="5">😊</span>
-        </div>
-      </div>
-      <div class="form-group">
-        <label>Оценка настроения (1-10):</label>
-        <div id="mood-scale-selector">
-          <button type="button" class="mood-scale-btn" data-mood="1">1</button>
-          <button type="button" class="mood-scale-btn" data-mood="2">2</button>
-          <button type="button" class="mood-scale-btn" data-mood="3">3</button>
-          <button type="button" class="mood-scale-btn" data-mood="4">4</button>
-          <button type="button" class="mood-scale-btn" data-mood="5">5</button>
-          <button type="button" class="mood-scale-btn selected" data-mood="6">6</button>
-          <button type="button" class="mood-scale-btn" data-mood="7">7</button>
-          <button type="button" class="mood-scale-btn" data-mood="8">8</button>
-          <button type="button" class="mood-scale-btn" data-mood="9">9</button>
-          <button type="button" class="mood-scale-btn" data-mood="10">10</button>
-        </div>
-      </div>
-      <div class="form-group">
-        <label>Уровень стресса (смайлы):</label>
-        <div id="stress-emoji-selector">
-          <span class="stress-emoji" data-stress="1">😌</span>
-          <span class="stress-emoji" data-stress="2">🙂</span>
-          <span class="stress-emoji selected" data-stress="3">😐</span>
-          <span class="stress-emoji" data-stress="4">😟</span>
-          <span class="stress-emoji" data-stress="5">😰</span>
-        </div>
-      </div>
-      <div class="form-group">
-        <label>Оценка стресса (1-10):</label>
-        <div id="stress-scale-selector">
-          <button type="button" class="stress-scale-btn" data-stress="1">1</button>
-          <button type="button" class="stress-scale-btn" data-stress="2">2</button>
-          <button type="button" class="stress-scale-btn" data-stress="3">3</button>
-          <button type="button" class="stress-scale-btn" data-stress="4">4</button>
-          <button type="button" class="stress-scale-btn" data-stress="5">5</button>
-          <button type="button" class="stress-scale-btn selected" data-stress="6">6</button>
-          <button type="button" class="stress-scale-btn" data-stress="7">7</button>
-          <button type="button" class="stress-scale-btn" data-stress="8">8</button>
-          <button type="button" class="stress-scale-btn" data-stress="9">9</button>
-          <button type="button" class="stress-scale-btn" data-stress="10">10</button>
-        </div>
-      </div>
-      <button type="submit" class="btn btn-primary">Сохранить</button>
-    </form>
-  </div>
-
-  <!-- ══ СПИСОК ЗАПИСЕЙ + ЭКСПОРТ ══ -->
-  <div class="card fade-in">
-    <div style="display:flex; align-items:center; justify-content:space-between; margin-bottom:16px; flex-wrap:wrap; gap:10px;">
-      <h2 style="margin:0;">📅 Мои записи</h2>
-      <!-- export-btn → exportDiaryCSV() в app.js -->
-      <button id="export-btn" class="btn btn-export" style="font-size:0.85rem; padding:8px 18px;">
-        ⬇ Скачать CSV
-      </button>
-    </div>
-    <!-- Статистика -->
-    <div id="stats-summary" style="margin-bottom: 20px; padding: 16px; background: var(--bg-secondary); border-radius: 8px; text-align: center;">
-      <h3 style="margin: 0 0 10px 0; font-size: 1.1rem;">📊 Среднее настроение за весь период</h3>
-      <div style="font-size: 2rem; font-weight: bold; color: var(--primary);"><span id="avgScore">-</span></div>
-      <div style="font-size: 0.9rem; color: var(--muted);">Средняя оценка настроения (1-10)</div>
-      <p id="moodMessage" style="font-size: 0.9rem; margin: 8px 0 0 0; color: var(--text);"></p>
-      <div id="stress-avg" style="font-size: 1.5rem; margin-top: 8px; color: var(--text);">Средний стресс: -</div>
-    </div>
-    <!-- Записи рендерятся через JS: renderEntries() -->
-    <div id="entries-list"></div>
-  </div>
-
-</div><!-- /container -->
-
-
-<!-- ══ МОДАЛЬНОЕ ОКНО "Срочно успокоиться" ══
-     Изначально скрыт (display:none в CSS).
-     Открывается через openModal() в app.js.
-     ══ -->
-<div id="calm-modal" class="modal-overlay" role="dialog" aria-modal="true" aria-labelledby="modal-heading">
-
-  <div class="modal-box">
-
-    <!-- Кнопка закрытия × -->
-    <button id="modal-close-btn" class="modal-close" title="Закрыть">✕</button>
-
-    <!-- Заголовок — заполняется через JS -->
-    <h2 class="modal-title" id="modal-heading">Совет</h2>
-
-    <!-- Блок текстового совета (скрывается для аудио) -->
-    <div class="modal-tip" style="display:none;"></div>
-
-    <!-- Блок видео (скрывается для совета) -->
-    <div class="modal-video" style="display:none;"></div>
-
-    <!-- Кнопки действий -->
-    <div class="modal-actions">
-      <button id="modal-next-btn" class="btn btn-primary">Ещё совет 🔀</button>
-      <a href="audio.html" class="btn btn-outline">Все медитации</a>
-    </div>
-
-  </div>
+  <!-- Видео рендерятся из массива MEDITATIONS в app.js -->
+  <div id="audio-grid"></div>
 </div>
-
-<script src="js/dashboard.js"></script>
 
 </body>
 </html>
