--- a/login.html
+++ b/login.html
@@ -1,50 +1,21 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Вход — ПсиПоддержка</title>
-  <link rel="stylesheet" href="style.css" />
-  <script src="app.js"></script>
-</head>
-<body>
+MIT License
 
-<nav>
-  <a class="nav-logo" href="index.html">🌿 ПсиПоддержка</a>
-  <div class="nav-right">
-    <ul class="nav-links">
-      <li><a href="index.html">Главная</a></li>
-    </ul>
-    <button id="theme-toggle" title="Переключить тему">🌙</button>
-  </div>
-</nav>
+Copyright (c) 2026 Pomidorru
 
-<div class="container" style="max-width: 420px;">
-  <div class="card fade-in" style="margin-top: 40px;">
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
 
-    <div style="text-align:center; margin-bottom: 28px;">
-      <div style="font-size: 2.5rem; margin-bottom: 8px;">🌿</div>
-      <h1 style="font-size:1.6rem;">Добро пожаловать</h1>
-      <p>Введите любое имя и пароль — аккаунт создастся автоматически.</p>
-    </div>
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
 
-    <form id="login-form">
-      <div class="form-group">
-        <label for="login-name">Ваше имя</label>
-        <input type="text" id="login-name" placeholder="Например: Аня" autocomplete="off" required />
-      </div>
-      <div class="form-group">
-        <label for="login-pass">Пароль</label>
-        <input type="password" id="login-pass" placeholder="Любой пароль" required />
-      </div>
-      <p style="font-size:0.8rem; text-align:center; margin-bottom:16px;">
-        Данные хранятся только в вашем браузере 🔒
-      </p>
-      <button type="submit" class="btn btn-primary" style="width:100%;">Войти →</button>
-    </form>
-
-  </div>
-</div>
-
-</body>
-</html>
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
