--- a/pss10.html
+++ b/pss10.html
@@ -3,48 +3,48 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PSS-10 — Шкала воспринимаемого стресса — ПсиПоддержка</title>
-  <link rel="stylesheet" href="style.css?v=20260224" />
-  <script>
-    (function() {
-      const saved = localStorage.getItem('theme') || 'dark';
-      document.documentElement.className = saved;
-      document.body.className = saved;
-    })();
-  </script>
-  <script src="app.js?v=1"></script>
+  <title>Вход — ПсиПоддержка</title>
+  <link rel="stylesheet" href="style.css" />
+  <script src="app.js"></script>
 </head>
 <body>
 
-<!-- ══ НАВИГАЦИЯ ══ -->
 <nav>
   <a class="nav-logo" href="index.html">🌿 ПсиПоддержка</a>
   <div class="nav-right">
     <ul class="nav-links">
       <li><a href="index.html">Главная</a></li>
-      <li><a href="dashboard.html">Дневник</a></li>
-      <li><a href="tests.html">Тесты</a></li>
-      <li><a href="audio.html">Медитации</a></li>
-      <li><a id="logout-btn" href="#">Выйти</a></li>
     </ul>
     <button id="theme-toggle" title="Переключить тему">🌙</button>
   </div>
 </nav>
 
-<!-- ══ ОСНОВНОЙ КОНТЕНТ ══ -->
-<div class="container">
+<div class="container" style="max-width: 420px;">
+  <div class="card fade-in" style="margin-top: 40px;">
 
-  <div id="test-container" class="fade-in">
-    <!-- Тест или результат будут вставлены здесь -->
+    <div style="text-align:center; margin-bottom: 28px;">
+      <div style="font-size: 2.5rem; margin-bottom: 8px;">🌿</div>
+      <h1 style="font-size:1.6rem;">Добро пожаловать</h1>
+      <p>Введите любое имя и пароль — аккаунт создастся автоматически.</p>
+    </div>
+
+    <form id="login-form">
+      <div class="form-group">
+        <label for="login-name">Ваше имя</label>
+        <input type="text" id="login-name" placeholder="Например: Аня" autocomplete="off" required />
+      </div>
+      <div class="form-group">
+        <label for="login-pass">Пароль</label>
+        <input type="password" id="login-pass" placeholder="Любой пароль" required />
+      </div>
+      <p style="font-size:0.8rem; text-align:center; margin-bottom:16px;">
+        Данные хранятся только в вашем браузере 🔒
+      </p>
+      <button type="submit" class="btn btn-primary" style="width:100%;">Войти →</button>
+    </form>
+
   </div>
+</div>
 
-</div><!-- /container -->
-
-<script src="tests.js?v=1"></script>
-<script>
-  document.addEventListener('DOMContentLoaded', () => {
-    renderPSS10Test();
-  });
-</script>
 </body>
 </html>
